# py-translation-service

./: README.md  docker-compose.yml  main.py  pyproject.toml  start_worker.sh  test.py  worker.py
config/: __init__.py
constants/: __init__.py
